add login components style

--- a/src/base/colour.css
+++ b/src/base/colour.css
@@ -10,6 +10,8 @@
 
 @value makerGreen: #385461;
 
+@value makerWine: #8F2E61;
+
 @value makerPink: pink;
 
 @value makerShadow: rgba(217, 217, 217, 1);
