update the login colour

--- a/src/base/colour.css
+++ b/src/base/colour.css
@@ -2,13 +2,17 @@
 
 @value makerWhite: white;
 
-@value makerLightGrey: #e8e7e6;
+@value makerLightGrey: #E1E2E1;
 
 @value makerLightPink: #ffeae8;
 
 @value makerGrey: #626262;
 
-@value makerGreen: #385461;
+@value makerGreen: #196046;
+
+@value makerLightGreen: #4a8e71;
+
+@value makerDarkGreen: #00351f;
 
 @value makerWine: #8F2E61;
 
