--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,10 +1,10 @@
-@value makerGreen, makerWhite from '../../base/colour.css';
+@value makerGreen, makerDarkGreen, makerWhite from '../../base/colour.css';
 
 .header {
     width: 100%;
     text-align: center;
     padding: 1em;
-    background-color: makerGreen;
+    background-color: makerDarkGreen;
     position: relative;
 }
 
