--- a/src/base/colour.css
+++ b/src/base/colour.css
@@ -23,3 +23,5 @@
 @value makerColorful: linear-gradient(166deg, rgba(237, 193, 211, 1) 0%,rgba(212, 149, 161, 1) 60%, rgba(162, 63, 63, 1) 100%, rgba(127, 188, 242, 1) 100%);
 
 @value makerWheat: wheat;
+
+@value makerRed: #B56900;
