--- a/src/base/colour.css
+++ b/src/base/colour.css
@@ -20,7 +20,7 @@
 
 @value makerShadow: rgba(217, 217, 217, 1);
 
-@value makerColorful: linear-gradient(166deg, rgba(237, 193, 211, 1) 0%,rgba(212, 149, 161, 1) 60%, rgba(162, 63, 63, 1) 100%, rgba(127, 188, 242, 1) 100%);
+@value makerColourful: linear-gradient(166deg, rgb(182, 244, 146), rgb(51, 139, 147));
 
 @value makerWheat: wheat;
 
