--- a/src/components/preview/preview.module.css
+++ b/src/components/preview/preview.module.css
@@ -9,3 +9,12 @@
     text-align: center;
     font-size: 1rem;
 }
+
+.cards {
+    width: 100%;
+    height: 100%;
+    padding: 1em 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
